# mdscript

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  autobeat-orchestrator-analysis.md  package-lock.json  package.json  spec.md  tsconfig.base.json
.devflow/: .gitignore
.devflow/decisions/: decisions-ledger.jsonl  decisions.md  pitfalls.md
.devflow/features/: index.json
.features/: index.json
.features/mds-compiler/: .create-result.json  .refresh-result.json  KNOWLEDGE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.release/: RELEASE-FLOW.md
crates/mds-cli/: Cargo.toml
crates/mds-cli/src/: build.rs  main.rs  output.rs  watch.rs
crates/mds-cli/tests/: cli_build.rs  cli_commands.rs  cli_watch.rs  dir_build.rs  errors.rs  format_messages.rs  frontmatter.rs  imports.rs  inheritance.rs  integration.rs  intrinsic_output.rs  language.rs  objects.rs  security.rs  warnings.rs
crates/mds-cli/tests/common/: mod.rs
crates/mds-cli/tests/fixtures/: absolute_import.mds  alias_no_unqualified.mds  barrel_consumer.mds  code_block.mds  collision_b.mds  conditional_false.mds  duplicate_define.mds  escaped_brace_in_fn.mds  export_phantom.mds  export_prompt_consumer.mds  export_prompt_provider.mds  fn_in_loop.mds  formatting.mds  frontmatter_type_only.md  function.mds  greetings.mds  if_falsy_empty_string.mds  if_falsy_zero.mds  import_merge.mds  import_selective.mds  inh_analyst.mds  inh_base.mds  inh_messages_base.mds  inh_messages_child.mds  loop_var_shadow.mds  multilevel_a.mds  multilevel_b.mds  multiple_escaped_braces.mds  no_frontmatter_with_define.mds  not_mds.md  prompt_consumer.mds  prompt_provider.mds  recursive.mds  reexport_nonexistent.mds  test_export_from_scope.mds  var_collision_a.mds  welcome.mds
crates/mds-core/: Cargo.toml
crates/mds-core/src/: arity.rs  ast.rs  builtins.rs  error.rs  error_tests.rs  evaluator.rs  fs.rs  lexer.rs  lib.rs  limits.rs  options.rs  parser.rs  parser_helpers.rs  parser_tests.rs  resolver.rs  resolver_tests.rs  scope.rs  validator.rs  value.rs
crates/mds-core/src/resolver/: frontmatter.rs  inheritance.rs
crates/mds-core/tests/: api_surface.rs  intrinsic_output.rs  messages.rs  virtual_fs.rs
crates/mds-napi/: Cargo.toml  README.md  index.js  package.json
crates/mds-napi/__test__/: index.spec.mjs
crates/mds-napi/__test__/fixtures/: import_consumer.mds  messages.mds  simple.mds
crates/mds-napi/src/: lib.rs
crates/mds-python/: Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
crates/mds-python/benchmarks/: bench.py
crates/mds-python/python/mdscript/: __init__.py  __init__.pyi  _mdscript.pyi
crates/mds-python/src/: lib.rs
crates/mds-python/tests/: conftest.py  test_concurrency.py  test_contract.py  test_errors.py  test_functional.py  test_limits.py  test_parity.py  test_perf.py  test_pickle.py  test_typing.py  typecheck_sample.py
crates/mds-python/tests/fixtures/: import_provider.mds  mixed.mds
crates/mds-wasm/: Cargo.toml
crates/mds-wasm/src/: lib.rs
crates/mds-wasm/tests/: web.rs
examples/: README.md  node-api-test.mjs
examples/ai-agent/: chat-messages.mds  multi-turn-prompt.mds  system-prompt.mds  tool-instructions.mds
examples/api-docs/: endpoint-template.mds  response-schemas.mds
examples/blog-generator/: post-template.mds
examples/edge-cases/: 01_empty_arrays.mds  02_nested_objects.mds  03_shadowing.mds  04_escaped_and_code.mds  05_deeply_nested_logic.mds  06_object_iteration.mds  07_falsy_values.mds  08_runtime_vars.mds  09_reexport_chain.mds  10_consume_reexports.mds  11_include_directive.mds  12_selective_import.mds  13_function_composition.mds  14_merge_import.mds  15_frontmatter_passthrough.mds  23_expression_directives.mds  24_colon_in_string_args.mds  vars.json
examples/inheritance/: base-agent.mds  code-reviewer.mds  data-analyst.mds
examples/prompt-library/: examples.mds  formatting.mds  guardrails.mds  personas.mds
examples/rollup-app/: package.json  rollup.config.mjs
examples/rspack-app/: README.md  build.mjs  package.json  rspack.config.mjs
examples/stress-test/: main.mds  node-api-stress-test.mjs  vars.json
examples/vite-app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/webpack-app/: package.json  webpack.config.mjs
scripts/: build-wasm.sh  bump-version.mjs  verify-napi-names.mjs  verify-versions.mjs  write-cjs-package.cjs
src/: ast.rs  error.rs  evaluator.rs  lexer.rs  lib.rs  limits.rs  main.rs  parser.rs  resolver.rs  scope.rs  validator.rs  value.rs
test_playground/: 01_basic.mds  02_conditional.mds  03_loop.mds  04_function.mds  05_import_alias.mds  06_import_merge.mds  07_import_selective.mds  08_include.mds  09_complex_prompt.mds  10_nested.mds  11_escaped.mds  12_code_block.mds  13_reexport.mds  14_reexport_consumer.mds  15_runtime_vars.mds  err_circular_a.mds  err_circular_b.mds  err_undefined.mds  hello.mds  vars.json
test_playground/lib/: footer.mds  format.mds  rules.mds
test_playground/output/: 01_basic.md  02_conditional.md  03_loop.md  04_function.md  05_import_alias.md  06_import_merge.md  07_import_selective.md  08_include.md  09_complex_prompt.md  10_nested.md  11_escaped.md  12_code_block.md  14_reexport_consumer.md  15_runtime_vars.md
tests/: integration.rs
tests/fixtures/: arity_error.mds  circular_a.mds  circular_b.mds  collision_a.mds  collision_consumer.mds  escaped.mds  escaped_brace_in_blocks.mds  export_from_no_local.mds  fm_var_consumer.mds  fm_var_provider.mds  fn_calls_fn.mds  fn_param_shadow.mds  fns_only.mds  footer.mds  for_body_undef.mds  for_null_iterable.mds  if_falsy_empty_array.mds  if_falsy_false.mds  if_falsy_null.mds  import_alias.mds  include_empty_body.mds  include_no_import.mds  include_test.mds  index.mds  lexical_scope_consumer.mds  lexical_scope_formatter.mds  loop.mds  multi_param.mds  multilevel_c.mds  mutual_recursion.mds  nested_fn_calls.mds  nested_if.mds  (+17 more)
(+44 files in other folders)
