[workspace]
members = ["crates/mds-core", "crates/mds-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
readme = "README.md"
repository = "https://github.com/deanshrn/mdl"
keywords = ["markdown", "template", "llm", "prompt", "compiler"]

[workspace.dependencies]
indexmap = "2.2"
serde = { version = "1", features = ["derive"] }
# Pre-release (0.0.x); track for 0.1.x stability milestone
serde_yml = "0.0.12"
serde_json = "1"
miette = { version = "7" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
