[workspace]
members = ["crates/mds-core", "crates/mds-cli", "crates/mds-wasm", "crates/mds-napi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88" # napi 3.9.0 sets rust-version = "1.88" in its published Cargo.toml
license = "MIT"
readme = "README.md"
repository = "https://github.com/deanshrn/mdl"
keywords = ["markdown", "template", "llm", "prompt", "compiler"]

[workspace.dependencies]
indexmap = "2.2"
serde = { version = "1", features = ["derive"] }
# Pre-release (0.0.x); track for 0.1.x stability milestone
serde_yml = "0.0.12"
serde_json = "1"
miette = { version = "7" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
napi = { version = "3.9.0", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = "3.5.6"
napi-build = "2"

# panic = "unwind" is required workspace-wide because mds-wasm and mds-napi use
# catch_unwind at the JS boundary to convert panics into structured JS errors.
# Cargo does not support per-package panic strategy overrides for workspace profiles.
# Note: "unwind" is already Rust's default for dev, so the dev setting is
# explicit documentation only.
[profile.dev]
panic = "unwind"

[profile.release]
lto = true
panic = "unwind" # required by mds-wasm catch_unwind; see comment above

[profile.release.package.mds-wasm]
opt-level = "z"
strip = true
codegen-units = 1

[profile.release.package.mds-napi]
opt-level = 3
strip = true
codegen-units = 1
