[workspace]
members = ["crates/mds-core", "crates/mds-cli", "crates/mds-wasm", "crates/mds-napi", "crates/mds-python"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.88" # napi 3.9.0 sets rust-version = "1.88" in its published Cargo.toml
license = "MIT"
readme = "README.md"
repository = "https://github.com/dean0x/mdscript"
keywords = ["markdown", "template", "llm", "prompt", "compiler"]

[workspace.dependencies]
indexmap = "2.2"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
miette = { version = "7" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
napi = { version = "3.9.0", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = "3.5.6"
napi-build = "2"
# Python bindings (crates/mds-python). Pins are exact and soak-checked (2026-07-01):
# pyo3 0.28.0 & 0.28.1 are YANKED → 0.28.3 is the newest good 0.28 patch; 0.29.0
# (~20d old) is deferred for the ~30d soak. `abi3-py311` is ALWAYS on (not optional)
# so `cargo build/clippy/test --workspace` compile the cdylib against the stable ABI
# without linking libpython or needing a Python interpreter. `extension-module` is
# gated behind the crate's own default feature so it can be toggled off. pyo3 default
# features (incl. `macros`) are kept. pythonize's minor must track pyo3's (0.28 ↔ 0.28).
pyo3 = { version = "=0.28.3", features = ["abi3-py311"] }
pythonize = "=0.28.0"
# notify is CC0-1.0 (public-domain dedication). CC0 is permissive and non-contaminating
# with respect to the workspace MIT license. Explicitly accepted here.
# notify and ctrlc also introduce additional transitive license families (platform-specific):
#   - inotify 0.11.1 / inotify-sys 0.1.5 → ISC (Linux only)
#   - dispatch2 0.3.1 → Zlib OR Apache-2.0 OR MIT (macOS only, via ctrlc)
# ISC and Zlib are permissive and MIT-compatible; no copyleft or contamination risk.
# All three families are explicitly accepted here.
# A cargo-deny license allowlist (licenses.allow = ["MIT","Apache-2.0","CC0-1.0","ISC","Zlib"])
# would enforce this acceptance in CI (suggested follow-up, out of scope for this batch).
notify = "8"
ctrlc = "3.5"

# panic = "unwind" is required workspace-wide because mds-wasm and mds-napi use
# catch_unwind at the JS boundary to convert panics into structured JS errors.
# Cargo does not support per-package panic strategy overrides for workspace profiles.
# Note: "unwind" is already Rust's default for dev, so the dev setting is
# explicit documentation only.
[profile.dev]
panic = "unwind"

[profile.release]
lto = true
panic = "unwind" # required by mds-wasm catch_unwind; see comment above

[profile.release.package.mds-wasm]
opt-level = "z"
strip = true
codegen-units = 1

[profile.release.package.mds-napi]
opt-level = 3
strip = true
codegen-units = 1

[profile.release.package.mds-python]
opt-level = "z"
strip = true
codegen-units = 1
