[package]
name = "mds-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "MDS (Markdown Script) compiler — composable LLM prompt templates (library)"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/deanshrn/mdl"
keywords = ["markdown", "template", "llm", "prompt", "compiler"]
categories = ["template-engine", "text-processing"]

[lib]
name = "mds"

[dependencies]
indexmap = "2.2"
serde = { version = "1", features = ["derive"] }
# Pre-release (0.0.x); track for 0.1.x stability milestone
serde_yml = "0.0.12"
serde_json = "1"
miette = { version = "7" }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
