[package]
name = "mds-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MDS compiler WebAssembly bindings"
# Explicit (not workspace-inherited) on purpose: older wasm-pack manifest parsers
# read these npm-metadata fields without resolving Cargo workspace inheritance and
# choke on `license.workspace = true` ("invalid type: map, expected a string").
# mds-wasm is not published to crates.io, so DRY inheritance buys nothing here.
license = "MIT"
repository = "https://github.com/dean0x/mds"
keywords = ["markdown", "template", "llm", "prompt", "compiler"]
categories = ["wasm", "template-engine"]

[features]
# Expose the raw Rust panic payload as `err.detail` on mds::internal errors.
# Enable during local development to diagnose unexpected panics. NEVER enable
# in production builds — panic messages contain absolute filesystem paths.
debug-panics = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mds = { package = "mds-core", path = "../mds-core", version = "0.1.0" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }

[dev-dependencies]
mds = { package = "mds-core", path = "../mds-core", version = "0.1.0" }
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# -Oz: optimize for size. Rust 1.88+ emits post-MVP WASM features that wasm-opt
# rejects by default — each must be explicitly enabled.
# Requires Binaryen: CI uses phi-ag/setup-binaryen; locally `brew install binaryen`.
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-sign-ext", "--enable-nontrapping-float-to-int", "--enable-mutable-globals"]
